# chatgpterm-rs

./: Cargo.toml  LICENSE  README.md  build_all.sh
src/: main.rs
